* adds missing space in bootstrap3/search/advanced/limit line 14 * corrects bootstrap3/scss/components/offcanvas.scss line 68, calc in scss like so: calc(#{$offcanvas-padding} - 5px);

--- a/themes/bootstrap3/scss/components/offcanvas.scss
+++ b/themes/bootstrap3/scss/components/offcanvas.scss
@@ -65,7 +65,7 @@ $offcanvas-padding: 30px !default; // Body offset when offcanvas active, also wi
       display: block;
       position: fixed;
       top: 0;
-      width: calc($offcanvas-padding - 5px);
+      width: calc(#{$offcanvas-padding} - 5px);
       height: 100%;
       border-left: 1px solid $gray-lighter;
       border-right: 1px solid $gray-lighter;
